@@ -1,3 +1,6 @@
+19990510-08:32 Eddie Runia
+    * include/harbclip.h grabbed
+
 19990510-01:19 Ryszard Glab <rglab@imid.med.pl>
 
     * source/compiler/harbour.l, source/compiler/harbour.y
